callScripts call only functions